implemented RootMenu animated transitioning between languages

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -2,7 +2,7 @@
   "subtitle": "Энциклопедия мужского стиля",
   "navigation": {
     "/": "Главная",
-    "/guides-topics": "Гайды, общие темы",
+    "/guides-topics": "Гайды и общие темы",
     "/colors-how-to": "Как сочетать цвета",
     "/how-to-travel": "Как путешествовать",
     "/black-white-ties": "Дресс-код black и white tie",
