--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -2,7 +2,7 @@
   "subtitle": "Men's style encyclopedia",
   "navigation": {
     "/": "Home",
-    "/guides-topics": "Generic topics & guides",
+    "/guides-topics": "Guides & generic topics",
     "/colors-how-to": "How to combine colors",
     "/how-to-travel": "How to travel",
     "/black-white-ties": "Black and white ties",
