--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -16,7 +16,7 @@
     "/accessories": "Accessories",
     "/materials-and-fabrics": "Fabrics & materials",
     "/patterns": "Patterns",
-    "/care": "Care",
+    "/maintenance": "Wardrobe maintenance",
     "/underwear": "Underwear",
     "/socks": "Socks",
     "/grooming": "Grooming",
