--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -16,7 +16,7 @@
     "/accessories": "Аксессуары",
     "/materials-and-fabrics": "Ткани и материалы",
     "/patterns": "Паттерны",
-    "/care": "Уход за одеждой",
+    "/maintenance": "Уход за одеждой",
     "/underwear": "Нижнее бельше",
     "/socks": "Носки",
     "/grooming": "Уход за собой",
