replace moscovian language with Ukrainian

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -29,6 +29,6 @@
   "subtitle": "Men's style encyclopedia",
   "switchLanguage": {
     "switchLang": "Switch language",
-    "switchLangTo": "Сменить язык на русский"
+    "switchLangTo": "Змінити мову на українську"
   }
 }
