menu display only those items that planned on release

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -24,7 +24,9 @@
     "/hands-care": "Hands and nails care",
     "/brands-stores": "Brands & stores",
     "/glossary": "Glossary",
-    "/mixed": "Mixed"
+    "/mixed": "Mixed",
+    "/about": "About",
+    "/outerwear/trench-coat": "Trench coat"
   },
   "subtitle": "Men's style encyclopedia",
   "switchLanguage": {
