--- a/public/locales/ua.json
+++ b/public/locales/ua.json
@@ -24,7 +24,9 @@
     "/hands-care": "Догляд за руками та нігтями рук",
     "/brands-stores": "Бренди, магазини",
     "/glossary": "Глосарій",
-    "/mixed": "Різне"
+    "/mixed": "Різне",
+    "/about": "Про проект",
+    "/outerwear/trench-coat": "Тренч"
   },
   "subtitle": "Енциклопедія чоловічого стилю",
   "switchLanguage": {
