--- a/public/locales/ua.json
+++ b/public/locales/ua.json
@@ -26,7 +26,7 @@
     "/glossary": "Глосарій",
     "/mixed": "Різне",
     "/about": "Про проект",
-    "/outerwear/trench-coat": "Тренч"
+    "/outerwear/trench-coat": "Тренчкот"
   },
   "subtitle": "Енциклопедія чоловічого стилю",
   "switchLanguage": {
